--- a/.github/workflows/sprawozdanie_lab3.yml
+++ b/.github/workflows/sprawozdanie_lab3.yml
@@ -6,7 +6,7 @@ jobs:
         runs-on: ubuntu-22.04
         steps:
             - uses: actions/checkout@v4
-            - run: pip install ipykernel nbconvert pint open-atmos-jupyter-utils scipy matplotlib numpy pympdata # zamiast --to pdf dajemy -- to script i usuwamy niepotrzebne instalacje (np. latex), żeby nie czekać tak długo na wykonanie
+            - run: pip install ipykernel nbconvert pint open-atmos-jupyter-utils scipy matplotlib numpy pympdata scienceplots # zamiast --to pdf dajemy -- to script i usuwamy niepotrzebne instalacje (np. latex), żeby nie czekać tak długo na wykonanie
             - run: python -m nbconvert --to script --execute labs/lab3/main.ipynb
             - uses: actions/upload-artifact@v4
               with:
