--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=7.1.0",
+    "ipywidgets>=8.1.7",
     "matplotlib>=3.10.7",
+    "mendeleev>=1.1.0",
     "numpy>=2.3.4",
     "open-atmos-jupyter-utils>=1.3.0",
     "pint==0.24.4",
