--- a/.github/workflows/sprawozdanie_lab2.yml
+++ b/.github/workflows/sprawozdanie_lab2.yml
@@ -1,6 +1,9 @@
 name: sprawozdanie_lab2
 
-on: push
+on:
+  push:
+    paths:
+      - "labs/lab2/**"
 jobs:
     job:
         runs-on: ubuntu-22.04
