--- a/.github/workflows/sprawozdanie_project.yml
+++ b/.github/workflows/sprawozdanie_project.yml
@@ -15,7 +15,7 @@ jobs:
               run: |
                   sudo apt-get update
                   sudo apt-get install -y inkscape pandoc texlive-xetex
-                  pip install ipykernel nbconvert open-atmos-jupyter-utils scipy matplotlib numpy pympdata pint==0.24.4 scienceplots
+                  pip install ipykernel nbconvert open-atmos-jupyter-utils scipy matplotlib numpy pympdata pint==0.24.4 scienceplots pandas
 
             - name: Convert notebook to PDF
               run: |
